@@ -16,10 +16,8 @@
 
 paste <- function (..., sep = " ", collapse = NULL)
     .Internal(paste(list(...), sep, collapse))
-
-
-##=== Could we consider a  .Primitive  *fast*
-##  paste2 <- function(x,y)  paste(x,y, sep='')
+paste0 <- function(..., collapse = NULL)
+    .Internal(paste0(list(...), collapse))
 
 ##=== Could we extend  paste(.) to (optionally) accept a
 ##    2-vector for collapse ?	 With the following functionality
